--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
 
     </head>
     <body>
-        <h1>MPSC IT Club</h1>
-        <h3>Empower Yourself through IT</h3>
+        <section class="header">
+            <center>
+                <h1>MPSC IT Club</h1>
+                <h3>Empower Yourself through IT</h3>
+            </center>
+        </section> 
         <a href="presentec.html" target="_blank">Executive Committee</a>
     </body>
 </html>
