--- a/presentec.html
+++ b/presentec.html
@@ -7,65 +7,71 @@
 
     </head>
     <body>
-        <h1>MPSC IT Club</h1>
-        <h3>Empower Yourself through IT</h3>
-        <table border="1">
-            <caption>Executive Committee 2020</caption>
-            <tr>
-                <th>Name</th>
-                <th>Designation</th>
-                <th>Image</th>
-            </tr>
-            <tr>
-                <td>Jurisha Haque</td>
-                <td>President</td>
-                <td>Image</td>
-            </tr>
-            <tr>
-                <td>Fabliha Zubaida Alam</td>
-                <td> Vice President</td>
-                <td>Image</td>
-            </tr>
-            <tr>
-                <td>Jurisha Haque</td>
-                <td>General Secretary</td>
-                <td>Image</td>
-            </tr>
-            <tr>
-                <td>Jurisha Haque</td>
-                <td>President</td>
-                <td>Image</td>
-            </tr>
-            <tr>
-                <td>Jurisha Haque</td>
-                <td>President</td>
-                <td>Image</td>
-            </tr>
-            <tr>
-                <td>Jurisha Haque</td>
-                <td>President</td>
-                <td>Image</td>
-            </tr>
-            <tr>
-                <td>Jurisha Haque</td>
-                <td>President</td>
-                <td>Image</td>
-            </tr>
-            <tr>
-                <td>Jurisha Haque</td>
-                <td>President</td>
-                <td>Image</td>
-            </tr>
-            <tr>
-                <td>Jurisha Haque</td>
-                <td>President</td>
-                <td>Image</td>
-            </tr>
-            <tr>
-                <td>Jurisha Haque</td>
-                <td>President</td>
-                <td>Image</td>
-            </tr>
-        </table>
+        <section class="header">
+            <center>
+                <h1>MPSC IT Club</h1>
+                <h3>Empower Yourself through IT</h3>
+            </center>
+        </section> 
+        <section>   
+            <table align="center">
+                <caption>Executive Committee 2020</caption>
+                <tr>
+                    <th>Name</th>
+                    <th>Designation</th>
+                    <th>Image</th>
+                </tr>
+                <tr>
+                    <td>Jurisha Haque</td>
+                    <td>President</td>
+                    <td><img src="images/jurisha.jpg" alt=""></td>
+                </tr>
+                <tr>
+                    <td>Fabliha Zubaida Alam</td>
+                    <td> Vice President</td>
+                    <td><img src="images/anita.jpg" alt=""></td>
+                </tr>
+                <tr>
+                    <td>Mubashshera Jahan Numa</td>
+                    <td>General Secretary</td>
+                    <td><img src="images/numa.jpg" alt=""></td>
+                </tr>
+                <tr>
+                    <td>Amreen Newaz</td>
+                    <td>General Secretary</td>
+                    <td><img src="images/amreen.jpg" alt=""></td>
+                </tr>
+                <tr>
+                    <td>Ramisa Raidah Arana</td>
+                    <td>Organising Secretary</td>
+                    <td><img src="images/arana.jpg" alt=""></td>
+                </tr>
+                <tr>
+                    <td>Syeda Fairuz Hossain</td>
+                    <td>Office Secretary</td>
+                    <td><img src="images/fairuz.jpg" alt=""></td>
+                </tr>
+                <tr>
+                    <td>Farhana Rahman</td>
+                    <td>Publication Secretary</td>
+                    <td><img src="images/fariha.jpg" alt=""></td>
+                </tr>
+                <tr>
+                    <td>Sadia Tasnim Biva</td>
+                    <td>Head of Discipline and External Affairs</td>
+                    <td><img src="images/biva.jpg" alt=""></td>
+                </tr>
+                <tr>
+                    <td>Nahian Maimuna Ahona</td>
+                    <td>Head of Volunteers</td>
+                    <td><img src="images/ahona.jpg" alt=""></td>
+                </tr>
+                <tr>
+                    <td>Raida Mubasshira Aurpa</td>
+                    <td>Treasurer</td>
+                    <td><img src="images/aurpa.jpg" alt=""></td>
+                </tr>
+            </table>
+        </section>
     </body>
 </html>
