--- a/ourstory.html
+++ b/ourstory.html
@@ -37,6 +37,31 @@
                 <input class="form-control mr-sm-2" type="search" placeholder="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
               </form>
+            </nav>
+            <div class="container">
+              <font face="calibri" size="5"> <center><h1><font color="75,0,130"> OUR STORY</font></h1></center><br><br>
+              IT was <b>1st October of 2018</b> when we started our journey with a vision to Empower the students of <b>Mohammadpur Preparatory  
+              School and College</b> through <b>IT</b> as well as to create unity among them.<br>
+              <br>  
+              With the adjuvant and support of the members of our Club along with the cordiality of our Executives,we conduct a fest
+              within the institution premises in the year 2019.  
+              That was our <b>First Fest</b> named <b><font color="0,0,128"> "MPSC 1st Inter Class IT Carnival"</font></b> which took place <br>on <b> 6th & 7th March of 2019.</b> The winners of the various
+              events of this fest were awarded on <b>7th March</b> in a splendour way!!  <br> <br>
+              In order to spur the students of different classes to  be involved in IT related task,we took various classes on MS Word,
+              MS Powerpoint,Programming and some other basic topics .The studnets had much enthusiasm to learn and they showed <br>continuous
+              efforts which results in their participation in the <b> <font color="0,0,128">"National Child & Teen Programming Contest 2018".</font></b>
+              <br> <br> 
+              In the same year,<b>during October</b>, we successfully conduct another fest named <b> <font color="0,0,128">"MPSC 2nd IT Carnival".</font> </b>
+              We had different interesting events along with <font color="purple"> <b>"TECHNOBUZZ"</b></font> in this fest.
+              Due to the  friendly behaviour,co-ordination and astute leading of our<br> Moderators, <b>Mohammad Rasheduzzaman</b> Sir and 
+              <b>Farzana Hoque Nishi</b> Miss, <br> <b><font color="green"> <center><h2>"We Make IT Happen!!!"</h2></center></font></b>
+              <br><br> 
+              With some expectancy and target,we have started the journey of <b>another year</b> along with the <b><font color="75,0,130"> New Executive Committee.</font></b>
+              Hopefully,with all your cooperation and clinch,  we will be able to go <br>ahead and fulfill all our expectancy regarding you!!
+              <br><center> <h3>So,stay inlaid with us and </h3> <font color="green"><b><h1>"Empower Yourself Through IT" </center></h1></b></font>
+
+          
+              </font>
             </div>
         </nav> 
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
