--- a/ec2020.html
+++ b/ec2020.html
@@ -42,7 +42,7 @@
               </div>
           </nav>
         </div>
-        <div class="container">
+        <div class="container element">
           <div class="heading">
             <h1>Executive Committee <span class="badge badge-secondary">2020</span></h1>
           </div>
